[package]
name = "acme-proxy"
version = "1.1.0"
authors = ["Joel Linn <jl@conductive.de>"]
edition = '2018'

[dependencies]
actix-rt = "2"
actix-http = "^3.0.0-beta.8"
actix-web = "^4.0.0-beta.8"
awc = "^3.0.0-beta.7"
clap = "2"
env_logger = "0.8"
log = "0.4"
regex = "1"

[profile.release]
lto = true
