[package]
name = "acme-proxy"
version = "1.2.0"
authors = ["Joel Linn <jl@conductive.de>"]
edition = '2018'

[dependencies]
actix-rt = "2"
actix-http = "3"
actix-web = "4"
awc = "3"
clap = { version = "3", features = [ "cargo" ] }
env_logger = "0.9"
log = "0.4"
regex = "1"

[profile.release]
lto = true
