[package]
name = "acme-proxy"
version = "1.2.1"
authors = ["Joel Linn <jl@conductive.de>"]
edition = '2018'

[dependencies]
actix-rt = "2"
actix-http = "3"
actix-web = "4"
awc = "3"
clap = { version = "4", features = [ "cargo", "string" ] }
env_logger = "0.10"
log = "0.4"
regex = "1"

[profile.release]
lto = true
